--- a/app/src/main/res/layout/activity_planet_details.xml
+++ b/app/src/main/res/layout/activity_planet_details.xml
@@ -59,6 +59,87 @@
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     tools:text="Rotation Period: " />
+
+                <TextView
+                    android:id="@+id/tvOrbitalPeriod"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bowlby_one_sc"
+                    android:paddingLeft="15dp"
+                    android:paddingTop="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    tools:text="Orbital Period: " />
+
+                <TextView
+                    android:id="@+id/tvDiameter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bowlby_one_sc"
+                    android:paddingLeft="15dp"
+                    android:paddingTop="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    tools:text="Diameter: " />
+
+                <TextView
+                    android:id="@+id/tvClimate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bowlby_one_sc"
+                    android:paddingLeft="15dp"
+                    android:paddingTop="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    tools:text="Climate: " />
+
+                <TextView
+                    android:id="@+id/tvTerrain"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bowlby_one_sc"
+                    android:paddingLeft="15dp"
+                    android:paddingTop="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    tools:text="Terrain: " />
+
+                <TextView
+                    android:id="@+id/tvPopulation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bowlby_one_sc"
+                    android:paddingLeft="15dp"
+                    android:paddingTop="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    tools:text="Population: " />
+
+                <Button
+                    android:id="@+id/btnBack"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#303030"
+                    android:fontFamily="@font/bowlby_one_sc"
+                    android:gravity="center_horizontal"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    android:text="Back"
+                    android:visibility="invisible"
+                    />
+
             </LinearLayout>
         </ScrollView>
 
@@ -68,6 +149,18 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_centerInParent="true" />
+
+        <ImageView
+            android:id="@+id/ivError"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/errorimage"
+            android:visibility="invisible"
+            />
 
     </RelativeLayout>
 
