--- a/app/src/main/res/layout/character_element.xml
+++ b/app/src/main/res/layout/character_element.xml
@@ -55,7 +55,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/bowlby_one_sc"
         android:includeFontPadding="false"
-        android:textColor="#E03F3F"
+        android:textColor="#DC9FE1"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/bowlby_one_sc"
         android:includeFontPadding="false"
-        android:textColor="#BD3FE0"
+        android:textColor="#E19F9F"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/bowlby_one_sc"
         android:includeFontPadding="false"
-        android:textColor="#F5DC53"
+        android:textColor="#E1D89F"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -175,7 +175,7 @@
         android:layout_marginEnd="5dp"
         android:backgroundTint="#303030"
         android:fontFamily="@font/bowlby_one_sc"
-        android:text="Planet"
+        android:text="@string/btnplanet"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="@id/guideline2"
         app:layout_constraintEnd_toEndOf="@id/guideline11"
@@ -190,7 +190,7 @@
         android:layout_marginEnd="5dp"
         android:backgroundTint="#303030"
         android:fontFamily="@font/bowlby_one_sc"
-        android:text="Films"
+        android:text="@string/btnfilms"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="@id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
