--- a/app/src/main/res/layout/film_element.xml
+++ b/app/src/main/res/layout/film_element.xml
@@ -94,7 +94,7 @@
         android:fontFamily="@font/bowlby_one_sc"
         android:includeFontPadding="false"
         android:paddingTop="8dp"
-        android:textColor="#F3DC74"
+        android:textColor="@color/filmsYellow"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline14"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +111,7 @@
         android:fontFamily="@font/bowlby_one_sc"
         android:includeFontPadding="false"
         android:paddingTop="8dp"
-        android:textColor="#A9E19F"
+        android:textColor="@color/filmsGreen"
         android:textSize="11sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
         app:layout_constraintEnd_toEndOf="parent"
@@ -128,7 +128,7 @@
         android:fontFamily="@font/bowlby_one_sc"
         android:includeFontPadding="false"
         android:paddingTop="8dp"
-        android:textColor="#9FE1D4"
+        android:textColor="@color/filmsCyan"
         android:textSize="11sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline16"
         app:layout_constraintEnd_toEndOf="parent"
@@ -145,7 +145,7 @@
         android:fontFamily="@font/bowlby_one_sc"
         android:includeFontPadding="false"
         android:paddingTop="8dp"
-        android:textColor="#9FAAE1"
+        android:textColor="@color/filmsBlue"
         android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline17"
         app:layout_constraintEnd_toEndOf="parent"
