--- a/app/src/main/res/layout/character_element.xml
+++ b/app/src/main/res/layout/character_element.xml
@@ -37,7 +37,7 @@
         android:fontFamily="@font/bowlby_one_sc"
         android:includeFontPadding="false"
         android:paddingTop="8dp"
-        android:textColor="#CBD5ED"
+        android:textColor="@color/characterBlue"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/guideline6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/bowlby_one_sc"
         android:includeFontPadding="false"
-        android:textColor="#DC9FE1"
+        android:textColor="@color/characterPink"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/bowlby_one_sc"
         android:includeFontPadding="false"
-        android:textColor="#E19F9F"
+        android:textColor="@color/characterRed"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/bowlby_one_sc"
         android:includeFontPadding="false"
-        android:textColor="#E1D89F"
+        android:textColor="@color/characterYellow"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,7 +173,7 @@
         android:layout_height="35dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:backgroundTint="#303030"
+        android:backgroundTint="@color/btnColor"
         android:fontFamily="@font/bowlby_one_sc"
         android:text="@string/btnplanet"
         android:textSize="8sp"
@@ -188,7 +188,7 @@
         android:layout_height="35dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:backgroundTint="#303030"
+        android:backgroundTint="@color/btnColor"
         android:fontFamily="@font/bowlby_one_sc"
         android:text="@string/btnfilms"
         android:textSize="8sp"
